# indis

./: README.md  experiment_analysis_final.ipynb  install.sh  pyproject.toml  run_all_experiments.sh
exp_full/: 5u_C1.csv  5u_C4.csv  5u_C8.csv  7u_C1.csv  7u_C4.csv  7u_C8.csv  9u_C1.csv  9u_C4.csv  9u_C8.csv  G1_P1.csv  G1_P16.csv  G1_P8.csv  M100_P1.csv  M100_P16.csv  M100_P8.csv  M500_P1.csv  M500_P16.csv  M500_P8.csv  P1_C1.csv  P1_C16.csv  P1_C8.csv  P8_C1.csv  P8_C16.csv  P8_C8.csv
src/: analyze_iperf_json.py  analyze_netmonitor.py  analyze_tcp_flows.py  datastore.py  experiment_analysis.py  experiment_automation.py  experiment_client.py  experiment_orchestrator.py  netmonitor.py  tcp_flow_monitor.py
