[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indis"
version = "0.1.0"
description = "Network experimentation framework for controlled iperf3 tests"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "psutil>=5.8.0", 
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0"
]

[project.scripts]
experiment-orchestrator = "src.experiment_orchestrator:main"
experiment-client = "src.experiment_client:main"
netmonitor = "src.netmonitor:main"
tcp-flow-monitor = "src.tcp_flow_monitor:main"
analyze-netmonitor = "src.analyze_netmonitor:main"
analyze-iperf-json = "src.analyze_iperf_json:main"
analyze-tcp-flows = "src.analyze_tcp_flows:main"